# faceauth

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TECHNICAL_DETAILS.md  faceauth.service  install.sh  next_plan.md  project_explanation.md  quantize.py
assets/: org.faceauth.gui.desktop
checkpoints/: phase6_optimizations.md  phase7a_quick_wins.md
faceauth-cli/: Cargo.toml
faceauth-cli/src/: main.rs
faceauth-core/: Cargo.toml
faceauth-core/src/: lib.rs
faceauth-gui/: Cargo.toml
faceauth-gui/src/: detection.rs  main.rs
faceauthd/: Cargo.toml
faceauthd/src/: camera.rs  config.rs  detection.rs  liveness.rs  main.rs  recognition.rs  security.rs  storage.rs
pam_faceauth/: Cargo.toml
pam_faceauth/src/: lib.rs
